# path_normalizer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: normal.rs
src/: lib.rs
tests/: normalize.rs
